[tool.poetry]
name = "stats-dashboard"
version = "0.1.0"
description = ""
authors = ["Minh Hoang TRINH <minh-hoang.trinh@spendesk.com>"]
readme = "README.md"
packages = [{include = "stats_dashboard"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
